--- a/index.html
+++ b/index.html
@@ -961,7 +961,10 @@
                                 </div>
                                 <h3 class="card-title">成长绩效来源</h3>
                             </div>
-
+                            <div class="list-item">
+                                <i class="fas fa-check-circle list-icon"></i>
+                                <span>个人能力提升</span>
+                            </div>
                             <div class="list-item">
                                 <i class="fas fa-check-circle list-icon"></i>
                                 <span>完成Hub任务</span>
